[package]
name = "pi_perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[lib]
name = "pi_calc"
path = "src/lib.rs"

[[bench]]
name = "pi_bench"
harness = false

[[bin]]
name = "pi_perf"
path = "src/main.rs"

[dependencies]
